--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,14 +4,15 @@ $screen-lg: 64em !default;
 
 // Headers
 $header-color: #fff !default;
-$header-bg-color: #159957 !default;
-$header-bg-color-secondary: #155799 !default;
+$header-bg-color: #1f2129 !default;
+$header-bg-color-secondary: #2b2d37 !default;
 
 // Colors
 $headings-color: #159957 !default;
 $body-text-color: #606c71 !default;
-$body-link-color: #1e6bb8 !default;
+$body-link-color: #ffad00 !default;
 $quote-text-color: #819198 !default;
+$banner-desc-color: #8a8a8f !default;
 
 $code-text-color: #567482 !default;
 $code-bg-color: #f3f6fa !default;
