--- a/_layouts/hs-team.html
+++ b/_layouts/hs-team.html
@@ -3,7 +3,7 @@
   {% include head.html %}
 
   <body>
-    {% include header.html %}
+    {% include header.html menu="team" %}
 
     <main role="main">
       <div class="container">
