--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,23 +16,23 @@
       </div>
     </div>
   </div>
-  <nav role="navigation">
+  <nav role="navigation" id="nav">
     <div class="container">
       <ul class="navbar-nav">
         <li class="nav-item {% if include.menu == 'index' %}active{% endif %}">
-          <a class="nav-link" href="/">About Us</a>
+          <a class="nav-link" href="/#nav">About Us</a>
           <div class="nav-bottom"></div>
         </li>
         <li class="nav-item {% if include.menu == 'dapps' %}active{% endif %}">
-          <a class="nav-link" href="/hs-dapps">Products</a>
+          <a class="nav-link" href="/hs-dapps#nav">Products</a>
           <div class="nav-bottom"></div>
         </li>
         <li class="nav-item {% if include.menu == 'team' %}active{% endif %}">
-          <a class="nav-link" href="/hs-team">Team</a>
+          <a class="nav-link" href="/hs-team#nav">Team</a>
           <div class="nav-bottom"></div>
         </li>
         <li class="nav-item {% if include.menu == 'invest' %}active{% endif %}">
-          <a class="nav-link" href="/hs-invest">Invest</a>
+          <a class="nav-link" href="/hs-invest#nav">Invest</a>
           <div class="nav-bottom"></div>
         </li>
       </ul>
