--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
     <div class="container">
       <ul class="navbar-nav">
         <li class="nav-item {% if include.menu == 'index' %}active{% endif %}">
-          <a class="nav-link" href="/#nav">About Us</a>
+          <a class="nav-link" href="/#nav">About</a>
           <div class="nav-bottom"></div>
         </li>
         <li class="nav-item {% if include.menu == 'dapps' %}active{% endif %}">
