homepage text cleanup

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
           <div class="nav-bottom"></div>
         </li>
         <li class="nav-item {% if include.menu == 'dapps' %}active{% endif %}">
-          <a class="nav-link" href="/hs-dapps#nav">Products</a>
+          <a class="nav-link" href="/hs-dapps#nav">DApps</a>
           <div class="nav-bottom"></div>
         </li>
         <li class="nav-item {% if include.menu == 'team' %}active{% endif %}">
