--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,9 +9,9 @@
                    /assets/images/hs-logo@3x.png 3x" />
       </div>
       <div class="banner-info">
-        <div class="banner-desc">The repository for Horizontal Systems</div>
+        <div class="banner-desc">A DAO Company ... </div>
         <div class="banner-link">
-          <a href="https://github.com/horizontalsystems">https://github.com/horizontalsystems</a>
+          <a href="https://github.com/horizontalsystems">github.com/horizontalsystems</a>
         </div>
       </div>
     </div>
@@ -20,19 +20,19 @@
     <div class="container">
       <ul class="navbar-nav">
         <li class="nav-item {% if include.menu == 'index' %}active{% endif %}">
-          <a class="nav-link" href="/#nav">About</a>
+          <a class="nav-link" href="/">About</a>
           <div class="nav-bottom"></div>
         </li>
         <li class="nav-item {% if include.menu == 'dapps' %}active{% endif %}">
-          <a class="nav-link" href="/hs-dapps#nav">DApps</a>
+          <a class="nav-link" href="/hs-dapps">DApps</a>
           <div class="nav-bottom"></div>
         </li>
         <li class="nav-item {% if include.menu == 'team' %}active{% endif %}">
-          <a class="nav-link" href="/hs-team#nav">Team</a>
+          <a class="nav-link" href="/hs-team">Team</a>
           <div class="nav-bottom"></div>
         </li>
         <li class="nav-item {% if include.menu == 'invest' %}active{% endif %}">
-          <a class="nav-link" href="/hs-invest#nav">Invest</a>
+          <a class="nav-link" href="/hs-invest">Invest</a>
           <div class="nav-bottom"></div>
         </li>
       </ul>
