--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -18,3 +18,14 @@ $code-text-color: #567482 !default;
 $code-bg-color: #f3f6fa !default;
 
 $border-color: #dce6f0 !default;
+
+$yellow: #FFAD00
+$dark: #1F2129
+$green: #1EBF6B
+$grey: #8a8a8f
+$lightgrey: ##e0e0e0
+$white: #ffffff
+$silver: #c8c7cc
+$softwhite: #f9f9f9
+$lightbg: #efeff4
+$steel20: #3373798c
