--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -2,30 +2,14 @@
 $screen-md: 42em !default;
 $screen-lg: 64em !default;
 
-// Headers
-$header-color: #fff !default;
-$header-bg-color: #1f2129 !default;
-$header-bg-color-secondary: #2b2d37 !default;
-
 // Colors
-$headings-color: #159957 !default;
-$body-text-color: #606c71 !default;
-$body-link-color: #ffad00 !default;
-$quote-text-color: #819198 !default;
-$banner-desc-color: #8a8a8f !default;
-
-$code-text-color: #567482 !default;
-$code-bg-color: #f3f6fa !default;
-
-$border-color: #dce6f0 !default;
-
-$yellow: #FFAD00
-$dark: #1F2129
-$green: #1EBF6B
-$grey: #8a8a8f
-$lightgrey: ##e0e0e0
-$white: #ffffff
-$silver: #c8c7cc
-$softwhite: #f9f9f9
-$lightbg: #efeff4
-$steel20: #3373798c
+$white: #FFFFFF !default;
+$white-soft: #F9F9F9 !default;
+$black: #000000 !default;
+$dark: #1F2129 !default;
+$dark-secondary: #2B2D37 !default;
+$yellow: #FFAD00 !default;
+$grey: #8A8A8F !default;
+$grey-light: #E0E0E0 !default;
+$green: #1EBF6B !default;
+$silver: #C8C7CC !default;
