fix navigation buttons and text layout

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                    /assets/images/hs-logo@3x.png 3x" />
       </div>
       <div class="banner-info">
-        <div class="banner-desc">A DAO Company ... </div>
+        <div class="banner-desc">DAO Company</div>
         <div class="banner-link">
           <a href="https://github.com/horizontalsystems">github.com/horizontalsystems</a>
         </div>
@@ -28,11 +28,7 @@
           <div class="nav-bottom"></div>
         </li>
         <li class="nav-item {% if include.menu == 'team' %}active{% endif %}">
-          <a class="nav-link" href="/hs-team">Team</a>
-          <div class="nav-bottom"></div>
-        </li>
-        <li class="nav-item {% if include.menu == 'invest' %}active{% endif %}">
-          <a class="nav-link" href="/hs-invest">Invest</a>
+          <a class="nav-link" href="/hs-governance">Governance</a>
           <div class="nav-bottom"></div>
         </li>
       </ul>
