work in progress ...

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,6 +26,10 @@
         <li class="nav-item {% if include.menu == 'dapps' %}active{% endif %}">
           <a class="nav-link" href="/hs-dapps">DApps</a>
           <div class="nav-bottom"></div>
+        </li>        
+        <li class="nav-item {% if include.menu == 'dapps' %}active{% endif %}">
+          <a class="nav-link" href="/get-in">Join</a>
+          <div class="nav-bottom"></div>
         </li>
       </ul>
     </div>
@@ -34,3 +38,5 @@
 
 
 
+href="/get-in">Join</a></li>
+    </ul>
