--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <ul class="bottom-nav">
       <li class="nav-item"><a class="nav-link" href="/">About</a></li>
-      <li class="nav-item"><a class="nav-link" href="/hs-dapps">DApps</a></li>
+      <li class="nav-item"><a class="nav-link" href="/get-in">Join</a></li>
     </ul>
     <hr/>
     <center>© Horizontal Systems 2018</center>
