polished homepage. moved about to a separate poage. looks cleaner now

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,6 @@
       <li class="nav-item"><a class="nav-link" href="/get-in">Join</a></li>
     </ul>
     <hr/>
-    <center>© Horizontal Systems 2018</center>
+    <center>Horizontal Systems</center>
   </div>
 </footer>
