--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,9 +9,9 @@
                    /assets/images/hs-logo@3x.png 3x" />
       </div>
       <div class="banner-info">
-        <div class="banner-desc">DAO Company</div>
+        <div class="banner-desc"></div>
         <div class="banner-link">
-          <a href="https://github.com/horizontalsystems">github.com/horizontalsystems</a>
+          <a href="https://github.com/horizontalsystems">Github @HorizontalSystems</a>
         </div>
       </div>
     </div>
@@ -20,12 +20,12 @@
     <div class="container">
       <ul class="navbar-nav">
       <li class="nav-item {% if include.menu == 'index' %}active{% endif %}">
-          <a class="nav-link" href="/">About</a>
+          <a class="nav-link" href="/">Apps</a>
           <div class="nav-bottom"></div>
         </li>
         
         <li class="nav-item {% if include.menu == 'dapps' %}active{% endif %}">
-          <a class="nav-link" href="/get-in">Join</a>
+          <a class="nav-link" href="/dao/about.md">About</a>
           <div class="nav-bottom"></div>
         </li>
       </ul>
