fix footer link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,8 +24,8 @@
           <div class="nav-bottom"></div>
         </li>
         
-        <li class="nav-item {% if include.menu == 'dapps' %}active{% endif %}">
-          <a class="nav-link" href="/dao/about.md">About</a>
+        <li class="nav-item {% if include.menu == 'about' %}active{% endif %}">
+          <a class="nav-link" href="/dao/about">About</a>
           <div class="nav-bottom"></div>
         </li>
       </ul>
