--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer>
   <div class="container">
     <ul class="bottom-nav">
-      <li class="nav-item"><a class="nav-link" href="/">About</a></li>
-      <li class="nav-item"><a class="nav-link" href="/get-in">Join</a></li>
+      <li class="nav-item"><a class="nav-link" href="/">Apps</a></li>
+      <li class="nav-item"><a class="nav-link" href="/dao/about">About</a></li>
     </ul>
     <hr/>
-    <center>Horizontal Systems</center>
+    <center>Horizontal Systems DAO</center>
   </div>
 </footer>
