change github link in the header, slightly

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
       <div class="banner-info">
         <div class="banner-desc"></div>
         <div class="banner-link">
-          <a href="https://github.com/horizontalsystems">Github @HorizontalSystems</a>
+          <a href="https://github.com/horizontalsystems">@Github</a>
         </div>
       </div>
     </div>
