--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,6 @@
       <li class="nav-item"><a class="nav-link" href="/dao/about">About</a></li>
     </ul>
     <hr/>
-    <center>Horizontal Systems DAO</center>
+    <center>Horizontal Systems DAO<br><br><a href="mailto:hsdao@protonmail.ch">hsdao@protonmail.ch</a></center>
   </div>
 </footer>
