add github link to header and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,7 @@
     <ul class="bottom-nav">
       <li class="nav-item"><a class="nav-link" href="/">Apps</a></li>
       <li class="nav-item"><a class="nav-link" href="/dao/about">About</a></li>
+      <li class="nav-item"><a class="nav-link" href="https://github.com/horizontalsystems">Github</a></li>
     </ul>
     <hr/>
     <center>Horizontal Systems DAO<br>contact: hsdao@protonmail.ch</center>
