--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,16 +2,16 @@
   <div class="container">
     <div class="banner">
       <div class="banner-logo">
-        <img alt={{site.title}} width="277"
+        <a href="/"><img alt={{site.title}} width="277"
              src="/assets/images/hs-logo.png"
              srcset="
                    /assets/images/hs-logo@2x.png 2x,
-                   /assets/images/hs-logo@3x.png 3x" />
+                   /assets/images/hs-logo@3x.png 3x" /></a>
       </div>
       <div class="banner-info">
         <div class="banner-desc"></div>
         <div class="banner-link">
-           <a href="https://github.com/horizontalsystems"></a>
+
         </div>
       </div>
     </div>
@@ -30,7 +30,7 @@
           <div class="nav-bottom"></div>
         </li>
 
-        <li class="nav-item {% if include.menu == 'about' %}active{% endif %}">
+        <li class="nav-item">
           <a class="nav-link" href="https://github.com/horizontalsystems">Github</a>
           <div class="nav-bottom"></div>
         </li>
