refactor homepage layout and text

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container">
     <ul class="bottom-nav">
-      <li class="nav-item"><a class="nav-link" href="/">Apps</a></li>
+      <li class="nav-item"><a class="nav-link" href="/">Products</a></li>
       <li class="nav-item"><a class="nav-link" href="/dao/about">About</a></li>
       <li class="nav-item"><a class="nav-link" href="https://github.com/horizontalsystems">Github</a></li>
     </ul>
