--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,15 +21,15 @@
       <ul class="navbar-nav">
 
         <li class="nav-item {% if include.menu == 'index' %}active{% endif %}">
-          <a class="nav-link" href="/">Apps</a>
+          <a class="nav-link" href="/">Products</a>
           <div class="nav-bottom"></div>
         </li>
-        
+
         <li class="nav-item {% if include.menu == 'about' %}active{% endif %}">
           <a class="nav-link" href="/dao/about">About</a>
           <div class="nav-bottom"></div>
         </li>
-
+ 
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/horizontalsystems">Github</a>
           <div class="nav-bottom"></div>
