--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,9 +21,15 @@
       <ul class="navbar-nav">
 
         <li class="nav-item {% if include.menu == 'index' %}active{% endif %}">
-          <a class="nav-link" href="/">Products</a>
+          <a class="nav-link" href="/">Apps</a>
           <div class="nav-bottom"></div>
         </li>
+
+        <li class="nav-item {% if include.menu == 'about' %}active{% endif %}">
+          <a class="nav-link" href="/libraries">Libraries</a>
+          <div class="nav-bottom"></div>
+        </li>
+
 
         <li class="nav-item {% if include.menu == 'about' %}active{% endif %}">
           <a class="nav-link" href="/dao/about">About</a>
