fix highlight in nav menu on libraries page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
           <div class="nav-bottom"></div>
         </li>
 
-        <li class="nav-item {% if include.menu == 'about' %}active{% endif %}">
+        <li class="nav-item {% if include.menu == 'libraries' %}active{% endif %}">
           <a class="nav-link" href="/libraries">Libraries</a>
           <div class="nav-bottom"></div>
         </li>
