cleaup text and layout

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,8 @@
       <li class="nav-item"><a class="nav-link" href="/">Products</a></li>
       <li class="nav-item"><a class="nav-link" href="/dao/libraries">Libraries</a></li>      
       <li class="nav-item"><a class="nav-link" href="/dao/about">About</a></li>
-      <li class="nav-item"><a class="nav-link" href="https://github.com/horizontalsystems">Github</a></li>
     </ul>
     <hr/>
-    <center>Horizontal Systems DAO<br>contact: hsdao@protonmail.ch</center>
+    <center>Horizontal Systems<br>contact: hsdao@protonmail.ch</center>
   </div>
 </footer>
