Redesign libraries page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,9 +9,11 @@
                    /assets/images/hs-logo@3x.png 3x" /></a>
       </div>
       <div class="banner-info">
-        <div class="banner-desc"></div>
+        <div class="banner-desc">
+          hsdao@protonmail.ch
+        </div>
         <div class="banner-link">
-
+          &nbsp;
         </div>
       </div>
     </div>
