apply minor text edits

--- a/_layouts/libraries.html
+++ b/_layouts/libraries.html
@@ -28,7 +28,7 @@
             faster.
             <br><br>
 
-            Checkout, Build, Release.
+            
           </p>
 
           <div class="library">
@@ -42,22 +42,22 @@
           <div class="releases">
             <div class="release">
               <img class="inline-icon" src="/assets/images/swift.png" alt="Swift" width="24">
-              <div class="inline-name release-type">Swift Implemented</div>
+              <div class="inline-name release-type">Swift (iOS)</div>
 
               <ul class="release-links">
                 <li><a href="https://github.com/horizontalsystems/bitcoin-kit-ios/">Repository</a></li>
                 <li><a href="https://github.com/horizontalsystems/bitcoin-kit-ios/commits/master">Full development history</a></li>
-                <li><a href="https://github.com/horizontalsystems/bitcoin-kit-ios/releases">Releases</a> <span class="release-date">(last 10.03.2019)</span></li>
+                <li><a href="https://github.com/horizontalsystems/bitcoin-kit-ios/releases">Releases</a> <span class="release-date">(last on 10.03.2019)</span></li>
               </ul>
             </div>
             <div class="release">
               <img class="inline-icon" src="/assets/images/kotlin.png" alt="Kotlin" width="24">
-              <div class="inline-name release-type">Kotlin Implemented</div>
+              <div class="inline-name release-type">Kotlin (Android)</div>
 
               <ul class="release-links">
                 <li><a href="https://github.com/horizontalsystems/bitcoin-kit-android">Repository</a></li>
                 <li><a href="https://github.com/horizontalsystems/bitcoin-kit-android/commits/master">Full development history</a></li>
-                <li><a href="https://github.com/horizontalsystems/bitcoin-kit-android/releases">Releases</a> <span class="release-date">(last 10.03.2019)</span></li>
+                <li><a href="https://github.com/horizontalsystems/bitcoin-kit-android/releases">Releases</a> <span class="release-date">(last on 10.03.2019)</span></li>
               </ul>
             </div>
           </div>
@@ -70,28 +70,29 @@
           Light client implementation for Ethereum blockchain. <br><br>
 
           Build any kind of decentralized applications on top of Ethereum blockchain without getting your hands dirty
-          dealing with protocol. The light client implementation is work in progress and can be closely followed in
-          respective branhes of the repositories.
+          dealing with protocol. 
+
+          Note: The light client implementation is work in progress and can be closely followed in respective branches of the repositories below. Nearly done!
 
           <div class="releases">
             <div class="release">
               <img class="inline-icon" src="/assets/images/swift.png" alt="Swift" width="24">
-              <div class="inline-name release-type">Swift Implemented</div>
+              <div class="inline-name release-type">Swift (iOS)</div>
 
               <ul class="release-links">
-                <li><a href="https://github.com/horizontalsystems/ethereum-kit-ios">Repository</a></li>
+                <li><a href="https://github.com/horizontalsystems/ethereum-kit-ios">Code repository</a></li>
                 <li><a href="https://github.com/horizontalsystems/ethereum-kit-ios/commits/master">Full development history</a></li>
                 <li><a href="https://github.com/horizontalsystems/ethereum-kit-ios/releases">Releases</a> <span class="release-date">(last 10.03.2019)</span></li>
               </ul>
             </div>
             <div class="release">
               <img class="inline-icon" src="/assets/images/kotlin.png" alt="Kotlin" width="24">
-              <div class="inline-name release-type">Kotlin Implemented</div>
+              <div class="inline-name release-type">Kotlin (Android)</div>
 
               <ul class="release-links">
-                <li><a href="https://github.com/horizontalsystems/ethereum-kit-android">Repository</a></li>
+                <li><a href="https://github.com/horizontalsystems/ethereum-kit-android">Code repository</a></li>
                 <li><a href="https://github.com/horizontalsystems/ethereum-kit-android/commits/master">Full development history</a></li>
-                <li><a href="https://github.com/horizontalsystems/ethereum-kit-android/releases">Releases</a> <span class="release-date">(last 10.03.2019)</span></li>
+                <li><a href="https://github.com/horizontalsystems/ethereum-kit-android/releases">Releases</a> <span class="release-date">(last on 10.03.2019)</span></li>
               </ul>
             </div>
           </div>
