Make links color more darker

--- a/_sass/horizontalsystems.scss
+++ b/_sass/horizontalsystems.scss
@@ -149,7 +149,7 @@ nav {
       display: none;
       height: 4px;
       width: 80%;
-      background: $green;
+      background: $green-light;
       border-radius: 4px 4px 0 0;
     }
 
@@ -159,7 +159,7 @@ nav {
       }
 
       .nav-link {
-        color: $green;
+        color: $green-light;
       }
     }
 
