--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -11,5 +11,6 @@ $dark-secondary: #2B2D37 !default;
 $yellow: #FFAD00 !default;
 $grey: #8A8A8F !default;
 $grey-light: #E0E0E0 !default;
-$green: #1EBF6B !default;
+$green-light: #1EBF6B !default;
+$green: #148047!default;
 $silver: #C8C7CC !default;
