--- a/_sass/horizontalsystems.scss
+++ b/_sass/horizontalsystems.scss
@@ -1,6 +1,8 @@
 @import "variables";
 @import "mixins";
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700');
+@import "easy-steps";
+@import "advantages";
 
 * {
   box-sizing: border-box;
