Apple new design
  Cleanup code
  Remove unnecessary content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,6 @@
 <footer>
   <div class="container">
-    <ul class="bottom-nav">
-      <li class="nav-item"><a class="nav-link" href="/">Products</a></li>
-      <li class="nav-item"><a class="nav-link" href="/libraries">Libraries</a></li>      
-      <li class="nav-item"><a class="nav-link" href="/dao/about">About</a></li>
-    </ul>
-    <hr/>
-    <center>Horizontal Systems<br>contact: hsdao@protonmail.ch</center>
+    <hr />
+    <div>Horizontal Systems</div>
   </div>
 </footer>
