--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,14 +7,49 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <link rel="stylesheet" href="{{ '/assets/css/styles.css?v=' | append: site.github.build_revision | relative_url }}">
+    <script type="application/javascript" src="{{ '/assets/js/script.js?v=' | append: site.github.build_revision | relative_url }}"></script>
   </head>
-
   <body>
-    {% include header.html menu=page.active %}
+    {% assign lang=site.lang[page.lang] %}
+    {% assign content_md = 'content/content-' | append: page.lang | append: '.md' %}
+
+    {% include header.html lang=lang %}
 
     <main role="main">
       <div class="container">
-        {{ content }}
+        {% capture content_capture %}
+          {% include {{content_md}} %}
+        {% endcapture %}
+
+        <div class="main-content">
+          {{ content_capture | markdownify }}
+        </div>
+
+        <div class="slogan">
+          {{ lang.slogan }}
+        </div>
+
+        <div class="download-apps">
+
+          <a href="https://itunes.apple.com/app/bank-bitcoin-wallet/id1447619907?ls=1&mt=8">
+            <img alt={{site.title}} width="133"
+                 src="/assets/images/download/app-store.png"
+                 srcset="
+                   /assets/images/download/app-store@2x.png 2x,
+                   /assets/images/download/app-store@3x.png 3x" /></a>
+          <a href="https://play.google.com/store/apps/details?id=io.horizontalsystems.bankwallet">
+            <img alt={{site.title}} width="133"
+                 src="/assets/images/download/google.png"
+                 srcset="
+                   /assets/images/download/google@2x.png 2x,
+                   /assets/images/download/google@3x.png 3x" /></a>
+          <a href="/">
+            <img alt={{site.title}} width="133"
+                 src="/assets/images/download/a-pk.png"
+                 srcset="
+                   /assets/images/download/a-pk@2x.png 2x,
+                   /assets/images/download/a-pk@3x.png 3x" /></a>
+        </div>
       </div>
     </main>
 
