--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -10,7 +10,7 @@ $dark: #1F2129 !default;
 $dark-secondary: #2B2D37 !default;
 $yellow: #FFAD00 !default;
 $grey: #8A8A8F !default;
-$grey-light: #E0E0E0 !default;
-$green-light: #1EBF6B !default;
-$green: #148047!default;
+$grey-lighter: rgba(115, 121, 140, 0.2);
+$grey-light: #C8C7CC !default;
+$green: #1EBF6B !default;
 $silver: #C8C7CC !default;
