--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,38 +18,15 @@
     <main role="main">
       <div class="container">
         {% capture content_capture %}
-          {% include {{content_md}} %}
+        {% include {{content_md}} %}
         {% endcapture %}
 
         <div class="main-content">
           {{ content_capture | markdownify }}
         </div>
 
-        <div class="slogan">
-          {{ lang.slogan }}
-        </div>
+        {% include wallets-apps.html %}
 
-        <div class="download-apps">
-
-          <a href="https://itunes.apple.com/app/bank-bitcoin-wallet/id1447619907?ls=1&mt=8">
-            <img alt={{site.title}} width="133"
-                 src="/assets/images/download/app-store.png"
-                 srcset="
-                   /assets/images/download/app-store@2x.png 2x,
-                   /assets/images/download/app-store@3x.png 3x" /></a>
-          <a href="https://play.google.com/store/apps/details?id=io.horizontalsystems.bankwallet">
-            <img alt={{site.title}} width="133"
-                 src="/assets/images/download/google.png"
-                 srcset="
-                   /assets/images/download/google@2x.png 2x,
-                   /assets/images/download/google@3x.png 3x" /></a>
-          <a href="/">
-            <img alt={{site.title}} width="133"
-                 src="/assets/images/download/a-pk.png"
-                 srcset="
-                   /assets/images/download/a-pk@2x.png 2x,
-                   /assets/images/download/a-pk@3x.png 3x" /></a>
-        </div>
       </div>
     </main>
 
