Adds open-source block

--- a/_includes/wallets-apps.html
+++ b/_includes/wallets-apps.html
@@ -1,4 +1,8 @@
-<div class="wallets-apps" id="apps">
+<div id="apps">
+  We happen to make great applications. Applications that enforce and guarantee your freedom.
+</div>
+
+<div class="wallets-apps">
   <div class="wallets-logo">
     <img alt={{site.title}} width="128"
          src="/assets/images/wallet-logo.png"
