--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,10 @@
 
         {% include wallets-apps.html %}
 
+        <hr>
+
+        {% include open-source-codes.html %}
+
       </div>
     </main>
 
