--- a/_sass/wallets-apps.scss
+++ b/_sass/wallets-apps.scss
@@ -2,11 +2,11 @@
 @import "mixins";
 
 #apps {
-  padding-top: 40px;
+  padding-top: 60px;
 }
 
 .wallets-apps {
-  margin: 15% 0 10%;
+  margin: 13% 0;
   display: flex;
   border-radius: 32px;
   background-image: linear-gradient(to bottom, rgba(115, 121, 140, 0.2), rgba(115, 121, 140, 0.1));
@@ -20,12 +20,27 @@
       position: absolute;
       top: -49px;
       left: 30px;
+
+      @include medium {
+        top: -40px;
+        width: 80px;
+      }
+
+      @include small {
+        top: -30px;
+        left: 25px;
+        width: 60px;
+      }
     }
   }
 
   .wallets-info {
     flex: 3;
     padding: 30px 0;
+
+    @include small {
+      padding: 15px 0;
+    }
   }
 
   .wallets-title {
@@ -37,11 +52,11 @@
     }
 
     @include medium {
-      font-size: 45px;
+      font-size: 35px;
     }
 
     @include small {
-      font-size: 35px;
+      font-size: 25px;
     }
   }
 
@@ -49,6 +64,10 @@
     font-size: 20px;
     color: $grey;
     font-weight: 300;
+
+    @include small {
+      font-size: 17px;
+    }
   }
 
   .download-apps {
