--- a/_includes/wallets-apps.html
+++ b/_includes/wallets-apps.html
@@ -1,5 +1,5 @@
 <div id="apps">
-  We happen to make great applications. Applications that enforce and guarantee your freedom.
+  We happen to make great applications. The apps that look good, feel nice and engineered to enforce and guarantee your freedom.
 </div>
 
 <div class="wallets-apps">
@@ -13,13 +13,14 @@
 
   <div class="wallets-info">
     <div class="wallets-title">
-      Unstoppable Wallet
+      The Unstoppable Wallet
     </div>
 
     <div class="wallets-description">
-      The Unstoppable Wallet is a secure and a fully decentralized crypto wallet app that supports major
-      cryptocurrencies, including Bitcoin(BTC), Ethereum(ETH), Bitcoin Cash(BCH), ERC20 tokens and growing.
-
+       Get unconditional protection for your crypto assets. Regardless of who you are or where you based, this wallet is equally open to all, lives online forever and engineered to protect your assets. It can't be blocked, it can't be shut down, it doesn't ask you for anything.
+      <br>
+       It's 100% under your control. It's unconditionally yours.
+      <br>       
       <br>
       <br>
       <a href="https://bankwallet.app">visit site</a>
