--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,10 +12,10 @@
       <div class="banner-menu">
         <nav role="navigation">
           <ul class="navbar-nav">
-            <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="/" class="nav-link">About</a></li>
             <li class="nav-item"><a href="#apps" class="nav-link">Apps</a></li>
             <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
-            <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+            <!--<li class="nav-item"><a href="#about" class="nav-link">About</a></li>-->
           </ul>
         </nav>
       </div>
