--- a/_includes/wallets-apps.html
+++ b/_includes/wallets-apps.html
@@ -17,9 +17,10 @@
     </div>
 
     <div class="wallets-description">
-       Get unconditional protection for your crypto assets. Regardless of who you are or where you based, this wallet is equally open to all, lives online forever and engineered to protect your assets. It can't be blocked, it can't be shut down, it doesn't ask you for anything.
-      <br>
-       It's 100% under your control. It's unconditionally yours.
+       Get unconditional protection for your crypto assets regardless of who you are or where you based.
+       <br><br>This wallet is equally open to all, lives forever and engineered to protect your assets. 
+       <br><br>It can't be blocked, it can't be shut down, it doesn't ask you for anything.
+       <br><br>It's fully under your control.
       <br>       
       <br>
       <br>
