--- a/_includes/wallets-apps.html
+++ b/_includes/wallets-apps.html
@@ -17,10 +17,7 @@
     </div>
 
     <div class="wallets-description">
-       Get unconditional protection for your crypto assets regardless of who you are or where you based.
-       <br><br>This wallet is equally open to all, lives forever and engineered to protect your assets. 
-       <br><br>It can't be blocked, it can't be shut down, it doesn't ask you for anything.
-       <br><br>It's fully under your control.
+       Get unconditional protection for your crypto assets regardless of who you are or where you based. It is equally open to all, lives forever and engineered to protect your assets. <br><br>It can't be blocked, it can't be shut down, it doesn't ask you for anything.<br><br>It's fully under your control.
       <br>       
       <br>
       <br>
