final text polish

--- a/_includes/wallets-apps.html
+++ b/_includes/wallets-apps.html
@@ -13,7 +13,7 @@
 
   <div class="wallets-info">
     <div class="wallets-title">
-      The Unstoppable Wallet
+    Unstoppable Wallet
     </div>
 
     <div class="wallets-description">
@@ -21,7 +21,7 @@
       <br>       
       <br>
       <br>
-      <a href="https://bankwallet.app">visit site</a>
+      <a href="https://unstoppable.money">visit site</a>
     </div>
 
     <div class="download-apps">
@@ -38,7 +38,7 @@
              srcset="
                    /assets/images/download/google@2x.png 2x,
                    /assets/images/download/google@3x.png 3x" /></a>
-      <a href="/">
+      <a href="https://github.com/horizontalsystems/bank-wallet-android/releases/">
         <img alt={{site.title}} width="133"
              src="/assets/images/download/a-pk.png"
              srcset="
